--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,38 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  position: relative;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.App .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200px;
+  padding: 0;
+  z-index: 10000;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App .trigger {
+  color: white;
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 23px;
+  cursor: pointer;
+  transition: color 0.3s;
 }
 
-.App-intro {
-  font-size: large;
+.App .trigger:hover {
+  color: #108ee9;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App .logo {
+  height: 32px;
+  background: #333;
+  border-radius: 6px;
+  margin: 16px;
+}
+
+.App .sider {
+  padding-top: 64px;
 }
