fix(style): fix layout

--- a/src/containers/Header/Header.less
+++ b/src/containers/Header/Header.less
@@ -1,7 +1,7 @@
 .Header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
+  height: auto;
 
   .Logo {
     animation: logo-spin infinite 20s linear;
@@ -13,8 +13,11 @@
   }
 
   .Title {
-    font-size: 1.5em;
+    font-size: 28px;
+    line-height: 28px;
     color: white;
+    margin-top: 20px;
+    margin-bottom: 0;
   }
 
   @keyframes logo-spin {
